# Scop

./: .gitignore  CMakeLists.txt  README.md  VULKAN_PIPELINE.md  preview.html  test_build.sh
shaders/: shader.frag  shader.vert  triangle.vert
src/: main.c
